[package]
name = "illusion"
version = "0.3.0"
description = "Transparent per-object client side encrypted S3 proxy"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/illusion"
repository = "https://github.com/wilsonzlin/illusion.git"
readme = "README.md"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2021"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[dependencies]
aes-gcm-siv = "0.11.1"
async-stream = "0.3.4"
aws-config = "0.55.0"
aws-sdk-s3 = { version = "0.25.0", features = ["rt-tokio"] }
axum = { version = "0.6", features = ["headers"] }
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
data-encoding = "2.3.3"
futures = "0.3.28"
hkdf = "0.12.3"
itertools = "0.10.5"
off64 = "0.3.0"
pbkdf2 = "0.12.1"
percent-encoding = "2.2.0"
rand = "0.8.5"
rpassword = "7.2.0"
sha2 = "0.10.6"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
